# AGS

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt
lab1/include/: Shader.h
lab1/shaders/: Example.fsh  Example.vsh
lab1/src/: Shader.cpp  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Shader.h
lab2/shaders/: Example.fsh  Example.vsh
lab2/src/: main.cpp
lab3/: CMakeLists.txt
lab3/example/SHADER/: Example.fsh  Example.vsh
lab3/include/: Camera.h  GraphicObject.h  drawBox.h
lab3/shaders/: Example.vsh
lab3/src/: Camera.cpp  GraphicObject.cpp  Shader.cpp  main.cpp
lab4/: CMakeLists.txt  drawBox.cpp
lab4/include/: GraphicObject.h  Mesh.h  ResourceManager.h  Vertex.h
lab4/shaders/: Example.fsh  Example.vsh
lab4/src/: Camera.cpp  GraphicObject.cpp  Mesh.cpp  ResourceManager.cpp  Shader.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/example/MESHES/characters/: README_DOG.md
lab5/example/SHADERS/: Example.fsh  Example.vsh
lab5/include/: Camera.h  GraphicObject.h  RenderManager.h  ResourceManager.h  Shader.h  Texture.h
lab5/src/: Camera.cpp  GraphicObject.cpp  RenderManager.cpp  ResourceManager.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/example/MESHES/characters/: dog.mtl  generate_dog_texture.py
lab6/example/shaders/: DiffuseTexture.vsh
lab6/include/: Camera.h  GraphicObject.h  Material.h  Mesh.h  RenderManager.h  ResourceManager.h  Shader.h
lab6/shaders/: Example.fsh  Example.vsh
lab6/src/: Camera.cpp  GraphicObject.cpp  Material.cpp  Mesh.cpp  RenderManager.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/example/DATA/MATERIALS/: dull_material.json
lab7/example/DATA/SHADERS/: DiffuseTextureInstanced.fsh
lab7/example/MESHES/cat/: triangulate.py
lab7/include/: Camera.h  FrustumCulling.h  GraphicObject.h  LevelOfDetail.h  Light.h  RenderManager.h  Scene.h  Shader.h
lab7/src/: Camera.cpp  FrustumCulling.cpp  GraphicObject.cpp  LevelOfDetail.cpp  Light.cpp  Mesh.cpp  RenderManager.cpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  main.cpp
lab8/example/DATA/: models.json
lab8/example/DATA/MATERIALS/: shiny_material.json
lab8/example/DATA/SCENES/: demo_scene.json  small_scene.json
lab8/example/DATA/SHADERS/: DiffuseTexture.fsh  DiffuseTextureInstanced.vsh  GreyPostProcessing.fsh  SepiaPostProcessing.fsh  SepiaPostProcessing.vsh  SimplePostProcessing.fsh
